Fixed bug with not working animation of the CircledWord on mobile.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -80,9 +80,9 @@ a {
 
 .animate__animated {
   @include media-breakpoint-down(lg) {
-    transition-property: none !important;
-    transform: none !important;
-    animation: none !important;
+    transition-property: none;
+    transform: none;
+    animation: none;
   }
 }
 
